--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <div class="score">
           SNAKE HIGHSCORE: <span id="snake-highscore">0</span>
         </div>
-        <!-- <div class="score">
+        <div class="score">
           TETRIS HIGHSCORE: <span id="tetris-highscore">0</span>
-        </div> -->
+        </div>
       </div>
       <div class="menu-games center-lr">
         <button id="btn-snake" class="menu-btn btn">SNAKE</button>
-        <!-- <button id="btn-tetris" class="menu-btn btn">TETRIS</button> -->
+        <button id="btn-tetris" class="menu-btn btn">TETRIS</button>
       </div>
     </div>
 
@@ -64,9 +64,9 @@
         <div class="controls-keys">
           <span id="up-instruction"></span>: W / <ion-icon name="arrow-up-outline"></ion-icon>
           </br>
-          MOVE LEFT: A / <ion-icon name="arrow-back-outline"></ion-icon>
-          </br>
           <span id="down-instruction"></span>: S / <ion-icon name="arrow-down-outline"></ion-icon>
+          </br>
+          MOVE LEFT: A / <ion-icon name="arrow-back-outline"></ion-icon>
           </br>
           MOVE RIGHT: D / <ion-icon name="arrow-forward-outline"></ion-icon>
           </br>
