--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="controls-keys">
           <span id="up-instruction"></span>: W / <ion-icon name="arrow-up-outline"></ion-icon>
           </br>
-          <span id="down-instruction"></span>: S / <ion-icon name="arrow-down-outline"></ion-icon>
+          <span id="down-instruction">MOVE DOWN</span>: S / <ion-icon name="arrow-down-outline"></ion-icon>
           </br>
           MOVE LEFT: A / <ion-icon name="arrow-back-outline"></ion-icon>
           </br>
@@ -99,8 +99,7 @@
             
             <button id="right-btn" class="controls-btn direction-btn btn"><ion-icon name="arrow-forward-outline"></ion-icon></button>
             <button id="down-btn" class="controls-btn direction-btn btn center-lr">
-              <!-- <ion-icon name="arrow-down-outline"></ion-icon> -->
-              <!-- <ion-icon name="return-up-back-outline"></ion-icon> -->
+              <ion-icon name="arrow-down-outline"></ion-icon>
             </button>
           </div>
         </div>
